Revert "fixed html spacing set modal to be on on page load"
This reverts commit f1451cf14697bd3abf3d56ea09c67e099aae4d7f.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,9 +142,7 @@ img {
 	letter-spacing: 0.1vw;
 	border-radius: 10px;
 }
-.modal-header {
-	font-size: 5vw;
-}
+
 .modal-header, .modal-body, .modal-footer {
 	background: #f3f2f1;
 	border: none;
